test/errors/function_not_in_scope.correct
error: function_not_in_scope.li:1:1: 'test' is not defined
│ test();
│ ~~~~
│ ^
